--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,12 @@
-# pytest.ini
 [pytest]
 DJANGO_SETTINGS_MODULE = LaMarqueza.settings
 python_files = test_*.py
 addopts = --reuse-db 
+markers =
+    categorias: test de categorias
+    productos: test de productos
+    usuarios: test de usuarios
+    pedidos: test de pedidos
+    carrito: test de carrito
+    ventas: test de ventas
+    login: marca para pruebas de inicio de sesión
